force-app/main/default/objects/GiftCommitment/fields/GiftId__c.field-meta.xml
<CustomField>
    <fullName>GiftId__c</fullName>
    <description>Gift Id  coming from blackbaud</description>
    <externalId>true</externalId>
    <label>GiftId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>