force-app/main/default/objects/GiftCommitment/fields/ImportId__c.field-meta.xml
<CustomField>
    <fullName>ImportId__c</fullName>
    <description>gift import Id coming from blackbaud</description>
    <externalId>true</externalId>
    <label>ImportId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>