force-app/main/default/objects/GiftCommitment/fields/InstallementFrequency__c.field-meta.xml
<CustomField>
    <fullName>InstallementFrequency__c</fullName>
    <description>Temporarily field for data coming from blackbaud</description>
    <label>Installement Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Installment</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Irregular</fullName>
            </value>
            <value>
                <fullName>Semi-Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>