force-app/main/default/objects/GiftCommitment/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <description>Temporarily Picklist for data migrated from blackbaud</description>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Personal Check</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>